--- a/templates/deleted_trades.html
+++ b/templates/deleted_trades.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}已删除交易记录 - 多策略交易跟踪系统{% endblock %}
+{% block title %}已删除交易记录 - 多策略系统分析{% endblock %}
 
 {% block content %}
 <div class="row">
