--- a/templates/strategy_scores.html
+++ b/templates/strategy_scores.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}策略评分 - 多策略交易跟踪系统{% endblock %}
+{% block title %}策略评分 - 多策略系统分析{% endblock %}
 
 {% block content %}
 <div class="row mb-4">
