--- a/templates/add_sell.html
+++ b/templates/add_sell.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}卖出交易 - 趋势交易跟踪系统{% endblock %}
+{% block title %}卖出交易 - 多策略系统分析{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
